2004-08-20  Daniel Jacobowitz  <dan@debian.org>

	* testglue.c: Prototype abort(3) and exit(3).

2004-08-14  Paul Brook  <paul@codesourcery.com>

	* config/sim.exp (sim_download, sim_upload): New procs.

2004-06-30  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-12  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-08  Alexandre Oliva  <aoliva@redhat.com>

	* testglue.c: Prototype abort and exit.

from  Alexandre Oliva  <aoliva@redhat.com>
        * baseboards/mn10300-sim.exp: Set needs_status_wrapper to empty
        string.
                                                                                
Tue Feb 25 05:19:57 UTC 2003  Brendan Conoboy  <blc@@redhat.com>

        * lib/remote.exp (call_remote): Remove multilibs from the board
	name when rebooting a board.

2004-0603  Alexandre Oliva  <aoliva@redhat.com>

       * baseboards/mn10300-sim.exp: Set needs_status_wrapper and
       noresults to zero.

2004-06-07  Ben Elliston  <bje@gnu.org>

	* lib/libgloss.exp (build_wrapper): Remove redundant set command.

2004-03-29  Joel Brobecker  <brobecker@gnat.com>

	* lib/libgloss.exp (find_gnatmake): New procedure.
	* lib/target.exp (default_target_compile): Add support for Ada.

2004-04-16  Kazuhiro Inaoka  <inaoka dot kazuhiro at renesas dot com>
                                                                                
        * baseboards/m32r-linux-sim.exp: Add New file.
	
2004-04-02  Rob Savoye  <rob@direwolf.welcomehome.org>

	* configure.ac, example/Makefile.am: Add example/mathhelper.
	* configure, alocal.m4, example/Makefile.in: Regenerated.

2004-04-02 Joel Sherrill <joel@OARcorp.com>

	* example/mathhelper: New example for using the unit testing API.

2004-03-05  Daniel Jacobowitz  <drow@mvista.com>
                                                                                