@@ -1,0 +1,36 @@
+# This is a list of toolchains that are supported on this board.
+set_board_info target_install {iq2000-elf}
+
+# Load the generic configuration for this board. This will define a basic set
+# of routines needed by the tool to communicate with the board.
+load_generic_config "sim"
+
+# basic-sim.exp is a basic description for the standard Cygnus simulator.
+load_base_board_description "basic-sim"
+
+# "iq2000" is the name of the sim subdir in devo/sim.
+setup_sim iq2000
+
+# No multilib options needed by default.
+process_multilib_options ""
+
+# We only support newlib on this target. We assume that all multilib
+# options have been specified before we get here.
+
+set_board_info compiler  "[find_gcc]"
+set_board_info cflags    "[libgloss_include_flags] [newlib_include_flags]"
+set_board_info ldflags   "[libgloss_link_flags] [newlib_link_flags]"
+# Special linker script needed to run C programs.
+set_board_info ldscript "-Tsim.ld";
+
+# The simulator doesn't return exit statuses and we need to indicate this;
+# the standard GCC wrapper will work with this target.
+set_board_info needs_status_wrapper  1
+# Doesn't pass arguments or handle signals, 
+# Can return results.
+# Does do inferiorio.
+set_board_info noargs 1
+set_board_info gcc,no_trampolines 1
+set_board_info gcc,no_label_values 1
+set_board_info gdb,nosignals 1
+
