@@ -1,3 +1,7 @@
+2004-10-27  Nick Clifton  <nickc@redhat.com>
+
+	* baseboards/iq2000-sim.exp: New file.
+
 2004-08-20  Daniel Jacobowitz  <dan@debian.org>
 
 	* testglue.c: Prototype abort(3) and exit(3).
